<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="3dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/meeting_item_room_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/meeting_item_topic_time_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/delete_icon"
                app:layout_constraintStart_toEndOf="@id/meeting_item_room_icon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/meeting_item_attendee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/mail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delete_icon"
                app:layout_constraintStart_toEndOf="@id/meeting_item_room_icon"
                app:layout_constraintTop_toBottomOf="@id/meeting_item_topic_time_room" />

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/delete_meeting"
                android:src="@drawable/ic_delete_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/meeting_item_topic_time_room"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>